<resources>
    <string name="app_name">ScreenshotsNannyDemo</string>

    <!-- MainActivity -->
    <string name="welcome">Welcome</string>
    <string name="button_second">Go</string>
    <string name="button_network">Network Activity</string>
    <string name="button_maps">Maps Activity</string>
    <string name="type_hint">Enter text here</string>
    <string name="menu_action_account">Account</string>

    <!-- SecondActivity -->
    <string name="title_activity_second">SecondActivity</string>
    <string name="intro_phrase">Once upon a time,&#160;</string>

    <!-- NetworkActivity -->
    <string name="title_activity_network">NetworkActivity</string>
    <string name="content_description_avatar">Avatar</string>

    <!-- MapsActivity -->
    <string name="title_activity_maps">Map</string>
    <string name="text_map">Map</string>
    <string name="map_marker_title">I am a Berliner</string>
    <string name="edit_text_lat_hint">Latitude</string>
    <string name="edit_text_lng_hint">Longitude</string>

    <!-- AccountActivity -->
    <string name="title_activity_account">AccountActivity</string>
    <string name="info_empty_account">No available user yet</string>
    <string name="message_account_fab_about">There is nothing special about me.</string>
    <string name="text_user">User</string>
    <string name="text_points">Points</string>
</resources>
